--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@
 	position:relative;
 	transform:scale(1);
 	transition:2s;
+	margin-bottom:40px;
 }
 .abt-img img{
 	border:2px solid grey;
@@ -300,7 +301,6 @@
 }
 .why-boxs{
     width: 33.33%;
-    
 	padding:50px 10px;
 }
 .box{
@@ -426,8 +426,8 @@
 	content:"";
 	position:absolute;
 	display:inline-block;
-	border-bottom:2px solid #bab3a6;	
-	width:430px;
+	border-bottom:2px dotted #bab3a6;	
+	width:280px;
 	height:1px;
 	top:10px;
 	left:0;
@@ -435,7 +435,7 @@
 }
 
 .food-menu .food-img{
-    width: 15%;
+    width: 20%;
     
 }
 .food-img img{
@@ -949,19 +949,19 @@
 	text-align:center;
 }*/
 
-.chef-sec{
+.chef-section{
 	background-color:black;
 	padding:60px 0px;
 }
-.chef-title{
+.chefs-title{
 	width:100%;
 }
-.chef-title h3{
+.chefs-title h3{
 	color:#aaaaaa;
 	font-size:18px;
 	letter-spacing:2px;
 }
-.chef-title h3:after{
+.chefs-title h3:after{
 	content:"";
 	width:120px;
 	height:1px;
@@ -969,28 +969,29 @@
 	margin:4px 12px;
 	background-color:grey;
 }
-.chef-title  p{
+.chefs-title  p{
 	color:#cda45e;
 	font-weight:700;
 	margin-top:30px;
 	font-size:40px;	
 }
-.chef-boxs{
+.chefs-boxs{
 	width:100%;
 	padding-top:40px;
 	display:flex;
 	flex-wrap:wrap;
 }
-.chef-boxs .box-01{
+.chefs-boxs .box-01{
 	width:33.33%;
 	position:relative;
 	overflow:hidden;
 }
-.chef-boxs .box-01 img{
+.chefs-boxs .box-01 img{
 	width:440px;
 	padding:0px 13px;
+	margin-bottom:30px;
 }
-.chef-boxs .hover{
+.chefs-boxs .hover{
 	width:100%;
 	opacity:0;
 	position:absolute;
@@ -1002,39 +1003,39 @@
 	justify-content:center;
 	align-items:flex-end;
 }
-.chef-boxs .hover .chef-dtl{
+.chefs-boxs .hover .chef-details{
 	text-align:center;
 	width:100%;
 	color:white;
 	height:425px;
 	position:absolute;
-	padding-top:348px;
+	padding-top:320px;
 	transition:0.4s;
 }
-.chef-boxs .hover .chef-dtl h4{
+.chefs-boxs .hover .chef-details h4{
 	font-size:19px;
 	margin-bottom:3px;
 }
-.chef-boxs .hover .chef-dtl span{
+.chefs-boxs .hover .chef-details span{
 	font-family: "Poppins", sans-serif;
 	display:block;
 	font-size:12px;
 	margin-bottom:15px;
 }
-.chef-boxs .hover .chef-dtl a{
+.chefs-boxs .hover .chef-details a{
 	margin:0 7px;
 }
-.chef-boxs .hover .chef-dtl a i{
+.chefs-boxs .hover .chef-details a i{
     font-size:19px;
 }
-.chef-icon{
+.chefs-icon{
 	display:flex;
 }
-.chef-boxs .hover:hover{
+.chefs-boxs .hover:hover{
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 20%, rgba(0, 212, 255, 0) 100%);
 	opacity:1;
 }
-.chef-boxs .hover .chef-dtl:hover{
+.chefs-boxs .hover .chef-details:hover{
 	transform:translateY(-30px);
 	transition:0.4s;
 }
@@ -1200,6 +1201,10 @@
 	width:100%;
 	display:flex;
 	flex-wrap:wrap;
+	margin-top:10px;
+}
+.formbox .row1:nth-child(1){
+	padding-right:0px;
 }
 .row1{
 	width:50%;
@@ -1211,7 +1216,7 @@
 	font-size:14px;
 	height:44px;
 	margin:0 0px 30px 0px;
-	width:99%;
+	width:100%;
 }
 .lboxes{
 	
@@ -1265,12 +1270,14 @@
 	background-color:#0c0b09;
 	padding: 40px 0; 
 	width:100%;
+	
 }
 .column-section{
 	width:100%;
 	display:flex;
 	flex-wrap:wrap;
 	height:200px;
+	background-color:black;
 }
 .colu1{
 	width:25%;
@@ -1314,6 +1321,23 @@
 	width:36px;
 	height:36px;
 }
+.icofont-twitter:hover{
+	background-color:#cda45e;	
+}
+.links ul li a{
+	text-decoration:none;
+	color:white;
+}
+.links ul li a:hover{
+	color:#cda45e;
+}
+.ourservices ul li a{
+	text-decoration:none;
+	color:white;
+}
+.ourservices ul li a:hover{
+	color:#cda45e;
+}
 .icofont-facebook{
 	font-size:18px;
 	display:inline-block;
@@ -1326,6 +1350,9 @@
 	text-align:center;
 	width:36px;
 	height:36px;
+}
+.icofont-facebook:hover{
+	background-color:#cda45e;	
 }
 .icofont-instagram{
 	font-size:18px;
@@ -1340,6 +1367,9 @@
 	width:36px;
 	height:36px;
 }
+.icofont-instagram:hover{
+	background-color:#cda45e;	
+}
 .icofont-skype{
 	font-size:18px;
 	display:inline-block;
@@ -1352,6 +1382,9 @@
 	text-align:center;
 	width:36px;
 	height:36px;
+}
+.icofont-skype:hover{
+	background-color:#cda45e;	
 }
 .icofont-linkedin{
 	font-size:18px;
@@ -1366,7 +1399,9 @@
 	width:36px;
 	height:36px;
 }
-
+.icofont-linkedin:hover{
+	background-color:#cda45e;	
+}
 .colu2 h4{
 	font-size:16px;
 	font-weight:600;
@@ -1404,12 +1439,14 @@
 	font-weight:600;
 	color:white;
 	padding-bottom:15px;
+	
 }
 .colu4 p{
 	color:white;	
 }
 .searchbar{
 	position:relative;
+	
 }
 .searchbar input{
 	width:100%;
@@ -1434,3 +1471,29 @@
 	border-radius:50px;
 }
 
+.footer-section{
+	background-color:#0c0b09;
+	padding: 40px 0; 
+	width:100%;
+	margin-top:5
+	px solid grey;
+}
+.copywrite{
+	text-align:center;
+	width:100%;
+	margin-top:40px;
+	color:white;
+}
+.credits{
+	padding-top:15px;
+	width:100%;
+	text-align:center;
+	font-size:15px;
+	color:white;
+	
+	
+}
+.credits a{
+	color:#cda45e;
+	text-decoration:none;
+}
